# Kontroller

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Examples/: CMakeLists.txt  ClientExample.cpp  DeviceExample.cpp  Example.cpp  PongExample.cpp  ServerExample.cpp
Include/Kontroller/: Client.h  Device.h  Kontroller.h  Packet.h  Server.h  State.h
Service/: CMakeLists.txt  Main.cpp  Service.cpp  Service.h
Source/: Client.cpp  Communicator.h  Communicator_Linux.cpp  Communicator_Windows.cpp  Communicator_macOS.cpp  Communicator_osx.cpp  Device.cpp  Kontroller.cpp  Server.cpp  Sock.cpp  Sock.h  State.cpp
examples/: CMakeLists.txt  Example.cpp
include/Kontroller/: Kontroller.h
src/: Communicator.h  Communicator_linux.cpp  Communicator_osx.cpp  Communicator_win.cpp  Kontroller.cpp  KontrollerIDs.inc  Kontroller_common.inc  Kontroller_linux.cpp  Kontroller_osx.cpp  Kontroller_win.cpp
